--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tina</groupId>
-    <artifactId>message_queue_app</artifactId>
+    <artifactId>messagequeueapp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>com.tina</groupId>
-            <artifactId>message-queue</artifactId>
+            <artifactId>messagequeue</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
